movie_project/movies/static/movies/css/users.css
/* ... */
.about {
    display: flex;
    align-items: stretch;
    gap: 10px;
    padding: 20px;
    margin-top: 15%;
}

.profile-bio {
    flex: 2;
    border: solid 1px #b1b1b1;
    padding: 20px;
    border-radius: 5px;
}

.personal-info {
    flex: 1;
    border: solid 1px #b1b1b1;
    margin-left: 1rem;
    padding: 20px;
    border-radius: 5px;
}

.profile-bio h1 {
    margin-bottom: 0.5rem;
}

.profile-bio i {
    margin-right: 10px;
    color: #b1b1b1;
}

.profile-bio p {
    font-size: 1rem;
    line-height: 2rem;
    color: #e9e9e9;
}

.personal-info ul {
    list-style-type: none;
    margin-top: 1rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr); 
    gap: 10px;
}

.personal-info ul li {
    margin: 1rem 0;
}

.personal-info ul h3 {
    color: #e7e7e7;
}

.personal-info ul li i {
    margin-left: 8px;
    font-size: 1rem;
    color: #b1b1b1;
}

.personal-info ul p {
    margin-top: 8px;
    color: #b1b1b1;
}

.often-works-with {
    flex: 0 1 40%;
    margin: 20px;
    padding-right: 4rem;
    border-right: solid 1px #414141;
}

.often-works-with-list {
    display: flex;
    align-items: flex-start;
    gap: 10px;
    margin-top: 20px;
}

.often-works-with-list li {
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center  ;
    flex: 0 0 10%;
    margin-top: 10px;
}

.often-works-with-list li a {
    text-decoration: none;
}

.often-works-with-list li img {
    width: 100%;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    object-fit: cover;
    filter: brightness(0.9) contrast(1.1) grayscale(0.25);
}

.often-works-with-list li h3,
.often-works-with-list li span {
    width: 15vw;  
}

.often-works-with-list li h3 {
    font-size: clamp(16px, 1.5vw, 32px);
    margin-top: 10px;
    margin-bottom: 5px;
}

.often-works-with-list li span {
    width: 120px;
    font-size: clamp(12px, 1.25vw, 28px);
    color: #b1b1b1;
}

.known-for {
    flex: 0 0 60%;
    position: relative; 
    width: 100%;
    overflow-x: hidden;
    padding: 20px;
}

.known-for ul {
    display: flex;
    list-style-type: none;
    gap: 1rem;
    overflow-x: auto;
    overflow-y: hidden;
    width: 100%;
    white-space: nowrap;
    padding-bottom: 15px;
}

.known-for ul li {
    flex: 0 0 22.5%;
    margin-top: 20px;
    min-height: 175px;
    min-width: 115px;
}

.known-for ul li a {
    display: inline-block;
}

.known-for ul li img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
}

.profile-awards {
    padding: 20px;
    margin-top: 4rem;
}

.profile-awards h1 {
    font-size: 2rem;
}

.profile-awards ul {
    list-style-type: none;
}

.profile-award-name {
    font-size: 1.5rem;
    margin-top: 4rem;
    margin-bottom: 3rem;
}

.profile-award-count {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-left: 2rem;
    margin-top: 0.5rem;
}

.profile-award-count p {
    color: #c0c0c0;
    font-size: 1rem;
}

.profile-award-name h3 {
    position: relative;
    padding-left: 1rem;
    margin-left: 1rem;
}

.profile-award-name h3::before {
    position: absolute;
    top: 0;
    left: 0;
    content: '';
    width: 4px;
    height: 100%;
    background-color: yellow;
}

.profile-award-item {
    display: flex;
    align-items: center;
    gap: 10px;
    padding-left: 1rem;
    margin-top: 1rem;
}

.profile-award-item i {
    background-color: yellow;
    font-size: 0.7rem;
    padding: 0.8rem;
    border-radius: 50%;
    color: black;
}

.profile-award-item h4 {
    font-size: 1.1rem;
}

.profile-award-item span {
    color: #c0c0c0;
    font-weight: 200;
    margin-left: 4px;
}

.profile-award-item p {
    margin-top: 4px;
}

.known-for ul::-webkit-scrollbar {
    height: 6px; 
}

.profile-movies {
    padding: 1.5rem;
}

.profile-movies ul {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    gap: 20px;
}

.profile-movies ul li {
    flex: 0 0 calc((100% / 5) - 20px);
    margin-top: 2rem;
}

.image-modal-container {
    display: none; 
    position: fixed; 
    top: 50%; 
    left: 50%; 
    transform: translate(-50%, -50%); 
    z-index: 100; 
    width: 100vw;
    height: 100vh;
}

.image-modal-container.visible {
    display: flex;
    align-items: center;
    justify-content: center;
}

.image-modal {
    position: relative;
    width: 90%;
    height: 90%;
}

.image-modal img {
    width: 100%; 
    height: 100%; 
    object-fit: cover;
}

.image-modal .overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 15%;
    padding: 10px;
    background-color: rgb(20, 20, 20, 0.7);
    border-top: solid 1px rgba(255, 255, 255, 0.3);
}

.close-modal-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 2%;
    right: 2%;
    padding: 1.25rem;
    height: 1.25rem;
    width: 1.25rem;
    background-color: rgb(20, 20, 20, 0.7);
    border-radius: 50%;
    cursor: pointer;
    transition: 0.3s;
}

.close-modal-btn:hover {
    background-color: rgba(51, 51, 51, 0.7);
}

.close-modal-btn i {
    font-size: 1.1rem;
}

.profile-gallery {
    padding: 20px;
}

.profile-gallery h1 {
    margin-bottom: 1rem;
}

.profile-gallery ul {
    display: flex;
    list-style-type: none;
    gap: 0.5rem;
}

.profile-gallery img {
    width: 100%;
    height: 100%;
    max-width: 500px;
    object-fit: cover;
    cursor: pointer;
    transition: 0.3s;
    filter: contrast(1.2) grayscale(0.1);
}

.profile-gallery img:hover {
    filter: contrast(1.3) grayscale(0.2);
}

